# deepghs-mcp

./: Dockerfile  README.md  deepghs_mcp.py  install.sh  pyproject.toml  server.json
