[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deepghs-mcp"
version = "1.0.0"
description = "MCP server for the DeepGHS anime AI ecosystem — dataset discovery, tag search, character dataset finder, and training pipeline code generation."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "citronlegacy", url = "https://github.com/citronlegacy" }
]
keywords = [
    "mcp",
    "model-context-protocol",
    "anime",
    "huggingface",
    "deepghs",
    "stable-diffusion",
    "lora",
    "dataset",
    "waifuc",
    "danbooru",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/citronlegacy/deepghs-mcp"
Repository = "https://github.com/citronlegacy/deepghs-mcp"
"Bug Tracker" = "https://github.com/citronlegacy/deepghs-mcp/issues"
"MCP Registry" = "https://registry.modelcontextprotocol.io"

[project.scripts]
deepghs-mcp = "deepghs_mcp:main"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["deepghs_mcp.py"]

[tool.mcp]
name = "io.github.citronlegacy/deepghs-mcp"
